styles/app.scss
@tailwind base;
@tailwind components;
@tailwind utilities;

@layer base {
  body {
    @apply font-newsreader;
  }

  ::-webkit-scrollbar {
    @apply hidden;
  }

  h1 {
    @apply xl:text-8xl xs:text-6xl text-5xl font-medium text-primary-600;
  }

  h2 {
    @apply text-6xl font-extrabold text-primary-600;
  }

  h3 {
    @apply md:text-5xl text-3xl font-light text-primary-600;
  }

  h4 {
    @apply text-4xl;
  }

  h6 {
    @apply xs:text-2xl text-xl font-extrabold text-primary-600;
  }

  p {
    @apply text-lg;
  }
}

@layer components {
  @import "layout/main";
  @import "layout/footer";
  @import "layout/header";
  @import "components/about";
  @import "components/progress-bar";
  @import "components/navbar";
}

@layer utilities {
  /* Define a utility for the Newsreader font */
  .font-newsreader {
    font-family: var(--font-newsreader);
  }
}

